# ksysguard-sensord

./: Cargo.toml  README  README.md
src/: config.rs  ksysguardd_protocol.rs  lib.rs  main.rs  monitor.rs  protocol.rs  server.rs
