[package]
name = "ksysguard-sensord"
version = "0.1.0"
authors = ["Vogel612 <vogel612@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4.*"
clap = { version = "3.1.*", features = ["derive"] }
configparser = "3.0.*"