[package]
name = "ksysguard-sensord"
version = "0.1.0"
authors = ["Vogel612 <vogel612@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.*", features = ["derive"] }
thread-control = "0.1.2"
either = "1.6.1"
itertools = "0.7.2"
configparser = "3.0.*"